--- a/26.03.23 update/templates/login.html
+++ b/26.03.23 update/templates/login.html
@@ -46,47 +46,38 @@
         </nav>
         <hr class = "border border-white border-1 opacity-100"> <!-- horizontal line, should be outside nav class--> <!-- border-white - color border-5 - size (5 - maximum 0 - invisible)  opacity-100 - clearance-->
     </header>
-    <main class="container">
-        <h1 class = "border-1">Привіт із сервера!</h1>
-        <!-- aria-label - color; Danger example - red, Warning example - yellow, Info example - blue, Success example - green  ( JUST TEXT, NOTHING CHANGES ) -->
-        <div class="progress" role="progressbar" aria-label="Info example" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
-          <!-- bg-info - blue, bg-danger - red, bg-warning - yellow, bg-success - green-->
-          <div class="progress-bar bg-info" style="width: 100%"></div>
-        </div>
-        <!-- Головний контент сторінки -->
-        <div class="banner">
-            {% for user in users %} <!-- jfor --> <!-- jif, jifelse-->
-            <div class="my-card">
-                {{user.name}}  <!-- write first user name -->
-            </div>
-            {% endfor %}    <!-- end -->
-
-        </div>
+    <main class="container d-flex justify-content-center align-items-center">
         
-        <h2>Spinner</h2>
-        <div class = "spinner">
-            <div class = "spinner1">
+        <form action = "", method = "POST"> <!-- action - action when you press submit button, post - action ( send encrypted information )-->
+            <h1 class = "mt-5">Login to your profile</h1> <!-- class = "mt-5" - indent from the top of the screen 1 - minimum value, 5 - maximum value -->
+            <div class="mb-3">
+                <label for="name" class="form-label">username:</label>
+                <input name = username type="text" class="form-control" id="name" placeholder="yo! waiting for your username...">
+                <!-- for and id should be same -->
             </div>
-        </div>
-        <table>
-            <tr>
-                <td><button class = "margin">wow text1</button></td>
-                <td><button class = "margin">wtf is this</button></td>
+            <div class="row g-3 align-items-center">
+                <div class="col-auto">
+                  <label for="password" class="col-form-label">Password:</label>
+                </div>
+                <div class="col-auto">
+                  <input name = password type="password" id="password" class="form-control" aria-labelledby="passwordHelpInline">
+                </div>
+                <div class="col-auto">
+                  <span id="password" class="form-text">
+                    Must be 8-20 characters long.
+                  </span>
+                </div>
 
-            </tr>
-            <tr>
-                <td><button>common -_-</button></td>
-                <td><button>anddd... wait for it</button></td>
-            </tr>
-        </table>
-    </main>
-    <footer>
-        <!-- Підвал сайту: про сайт, автор, контакти тощо -->
-    </footer>
-    <!-- Підключення JavaScript -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
-        crossorigin="anonymous"></script>
+              </div>
+        
+              <button type = "submit">Login</button>
+              <a href = " {{url_for('signup')}}" class = "text-black">Create profile</a>
+            <!-- class = "text-black" - set text black-->
+            <!-- {{url_for('signup')}} - link to the certain page-->
+
+        </form>  
+
+     
 </body>
 
 </html>
