--- a/27.03.23/templates/login.html
+++ b/27.03.23/templates/login.html
@@ -36,7 +36,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
               <div class="navbar-nav">
-                <a class="nav-link" aria-current="page" href="https://starbucks.com">Home</a> <!-- nav-link active ( more bold button, when change color it will be stil black ) P.s can be infinite amount of active buttons -->
+                <a class="nav-link" aria-current="page" href="{{url_for('main_page')}}">Home</a> <!-- nav-link active ( more bold button, when change color it will be stil black ) P.s can be infinite amount of active buttons -->
                 <a class="nav-link" href="https://starbucks.com/rewards">Features</a> <!-- nav-link - simple button-->
                 <a class="nav-link" href="https://starbucks.com/menu">Pricing</a> 
                 <!-- <a class="nav-link disabled">Disabled</a> --> <!-- disabled button ( less bold ) P.s can be infinitve amount of disabled buttons-->
