--- a/templates/login.html
+++ b/templates/login.html
@@ -1,5 +1,3 @@
-<!doctype html>
-<html lang="uk">
 
 {% extends 'base.html' %}
 
@@ -42,10 +40,7 @@
           <!-- class = "text-black" - set text black-->
           <!-- {{url_for('signup')}} - link to the certain page-->
 
-      </form>  
+      </form>
+  </main>
 
-   
-</body>
-
-</html>
 {% endblock content %}
